Prevents navigation menu collapse.
The menu was collapsing on even the widest screen, because the css that
rendered it was not making it wide enough to fill the space. Adding a
width to the ul element makes sure that it is rendered correctly to the
space that it needs to fill.

--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,10 @@ body {
   }
 }
 
+.nav-menu {
+  width: 100%;
+}
+
 .siteLogo {
   position:relative;
   top: 14px;
